--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "apollo-server": "^2.19.0",
-    "axios": "^0.21.0",
+    "axios": "^0.21.1",
+    "dotenv": "^8.2.0",
     "graphql": "^15.4.0"
   }
 }
